feat: edit parsed shopping constraints
